@@ -1,7 +1,7 @@
-#Wed, 31 Aug 2011 12:01:07 +0200
+#Wed, 14 Sep 2011 08:54:59 +0200
 #Wed Feb 02 15:55:13 CET 2011
 versionMicro=2
 versionMinor=4
 versionBranch=
-versionDate=20110831
+versionDate=20110914
 versionMajor=5
