@@ -1,6 +1,7 @@
 ili2fme 5.4.2 (2011-08-xx)
 ---------------------------
 - fixed: NullPointerException if filename without path
+- check that xtf_class is a qualified interlis name (contains at least one '.')
 
 ili2fme 5.4.1 (2011-08-03)
 ---------------------------
